# levelset_conforming

./: .gitignore  README.md  pyproject.toml
examples/: bulk_aero.py  k_reduction.py  preprocess_levelset.py  run_single.py  setup_levelset.py  test_eigvalsh.py  wing_model.py  wing_model_nastran.py
python_files/: custom_eig_external_general.py  custom_thread.py  fem_tools.py  guyan_reduction.py  guyan_reduction_tool.cpp  jac_tool.py  k_reduction_6dof.py  level_set_field.py  levelset_conforming_cgal.py  levelset_conforming_single.py  levelset_redivision.py  loss_func.py  mapping_dist.cpp  mapping_surfacenode.py  mapping_surfacenode_full.py  marcmodel.py  mesh_diff.cpp  mesh_postprocess_jax.py  mesh_postprocess_np.py  mesh_tools.py  mesh_utility.py  meshbuilder.cpp  nastran_tools.py  postprocess_marc.py  preprocess_mesh.py  sparse_tools.py  stl_tools.py  tetgen_tools.py  tetra4_fem.py  wing_box.py
src/lsto/: aeroelastic_scaling.py  calculate_init_phi.py  cgal_tools.py  custom_eig_external_general.py  custom_eigval_general.py  custom_identity.py  eig_cupy.py  gpu_memory_tools.py  init_phi.py  levelset2stl_mat_tetra.py  levelset_conforming_cgal.py  levelset_conforming_innter.py  levelset_conforming_penetrate.py  levelset_conforming_single.py  levelset_penetrate_aug.py  levelset_redivision_med.py  logger_settings.py  loss_func.py  nastran_tools.py  optimizer.py  plot_settings.py  reload_module.py  sparse_tools.py  stl_tools.py  tetgen_tools.py  update_levelset.py  wing_box.py  wing_model_nastran_case.py
src/lsto/fem/: elem2global.py  fem_tools.py  tetra4_fem.py
(+24 files in other folders)
