[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lsto"
version = "0.1"
dependencies = ["numpy==1.26.4",
                "jax==0.4.37",
                "scipy==1.15.3",
                "triangle==20230923",
                "plotly==5.18.0",
                "pyNastran @ git+https://github.com/SteveDoyle77/pyNastran.git@ea5de8243",
                "numpy-stl==3.1.1"
]

[tool.setuptools.packages.find]
where = ["src"]
